hoja de vida.html

--- a/nestú.html
+++ b/nestú.html
@@ -63,6 +63,15 @@
                 
             </tr>
         </table>
+        <table>
+            <tr>
+                <td>
+                    <p>hola
+                        
+                    </p>
+                </td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
