--- a/nestú.html
+++ b/nestú.html
@@ -26,8 +26,12 @@
                 </td>
             </tr>
             <tr>
-                <td rowspan="2" class="kol"  style="background-image: url(https://i.ibb.co/L6rgpvC/burger-1835192-960-720.jpg);">
-                    <h3>Hamburguesa</h3>
+                <td colspan="4">
+                    <strong>Hamburguesa</strong>
+                </td>
+            </tr>
+            <tr>
+                <td rowspan="2" class="kol"  style="background-image: url(https://i.ibb.co/L6rgpvC/burger-1835192-960-720.jpg); width: 400px;">
                 </td>
                 <td class="pore">
                     <h4>descripcion</h4>
